# Suryoyo-translate-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
migrations/2021-02-11-140242_create_translations/: down.sql  up.sql
source/: Dockerfile  backend.py  entrypoint.sh  main.py  requirements.txt
src/: database_conn.rs  fetch.rs  main.rs  models.rs  schema.rs
