[package]
name = "suryoyo_invoke"
version = "0.1.0"
authors = ["Yuhanun <y.citgez@student.utwente.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.0.1"
scraper = "0.12.0"
diesel = {version = "1.4.4", features = ["postgres", "serde_json"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
rocket = "0.4.6"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "json"]
version = "0.4.6"