[package]
authors = ["Yuhanun <y.citgez@student.utwente.nl>"]
edition = "2018"
name = "suryoyo_invoke"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4", features = ["postgres", "serde_json"]}
rocket = "0.4.6"
scraper = "0.12.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
ureq = "2.0.1"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "json"]
version = "0.4.6"
